--- a/src/components/Careers/RPManager.css
+++ b/src/components/Careers/RPManager.css
@@ -42,6 +42,12 @@
     color: #272C35;   
 }
 
+.rpmanager .main .top .left .jobdesc .hr{
+    width: 79.2rem;
+    border: 0.01rem solid #E0E0E0;
+    margin-top: 1.1rem;
+}
+
 .rpmanager .main .top .left .rpinfo{  
     width: 27rem;
     display: flex;
@@ -230,13 +236,13 @@
 }
 
 .rpmanager .main .top .right .recentJobs .recentJobHeading{
-    width: 112px;
-    height: 24px;
+    width: 11.2rem;
+    height: 2.4rem;
 
     font-family: 'Lato';
     font-style: normal;
     font-weight: 800;
-    font-size: 20px;
+    font-size: 2rem;
     line-height: 120%;
     /* identical to box height, or 24px */
     
@@ -311,6 +317,7 @@
     gap: .8rem;
     
     width: 34.9rem;
+    /* width: 46%; */
     height: 5.6rem;
     
     border: .1rem solid #E6E6E6;
@@ -356,6 +363,7 @@
     gap: .8rem;
 
     width: 75.8rem;
+    /* width: 100%; */
     height: 5.6rem;
     
     border: .1rem solid #E6E6E6;
@@ -421,22 +429,22 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding: 16px 40px;
-    gap: 8px;
-    width: 272px;
-    height: 54px;
+    padding: 1.6rem 4rem;
+    gap: .8rem;
+    width: 27.2rem;
+    height: 5.4rem;
     
     /* Primary */
     
     background: #4D0043;
-    border-radius: 45px;    
+    border-radius: 4.5rem;    
 
     /* Text */
 
     font-family: 'Lato';
     font-style: normal;
     font-weight: 800;
-    font-size: 18px;
+    font-size: 1.8rem;
     line-height: 120%;
     /* identical to box height, or 22px */
 
@@ -446,4 +454,270 @@
     /* Screen Color */
 
     color: #FFFFFF;
+}
+
+/* Responsiveness */
+@media screen and (max-width : 1440px){
+
+    /* .rpmanager .main .top .left{
+        width: 68%;
+    } */
+
+    .rpmanager .main .top .left .jobdesc{
+         width: 95%; 
+    }
+
+    .rpmanager .main .top .right{
+        width: 30%;
+    }
+
+    .rpmanager .main .top .right .hr{
+        width: 96%;
+    }
+    
+    .rpmanager .main .top .right .search .searchBar{
+        width: 74%;
+    }
+
+    .rpmanager .main .top .right .search input[type=text]{
+        width: 100%;
+    } 
+}
+
+@media screen and (max-width : 1200px){
+    .rpmanager .main{
+        width: 90%;
+    }
+}
+
+
+@media screen and (max-width : 1100px){
+    .rpmanager .main{
+        width: 93%;
+    }
+
+    .rpmanager .main .top .left{
+        width: 70rem; 
+   }
+
+   .rpmanager .main .top .left .jobdesc .hr{
+    width: 100%;
+    /* margin-top: 0; */
+    margin-top: -18px;
+   }
+   
+   .rpmanager .main .top .right .search .searchBar ::-webkit-input-placeholder{
+    /* color: #fff; */
+   }
+}
+
+
+@media screen and (max-width : 890px){
+    .rpmanager{
+        height: 300rem;
+        /* height: 275rem; */
+    }
+
+    .rpmanager .main{
+        height: 294rem;
+        /* height: 268rem; */
+        align-items: center;
+    }
+
+    .rpmanager .main .top{
+        height: 195rem;
+        /* height: 175rem; */
+    }
+    
+
+    .rpmanager .main .top .left {
+        width: 85%; 
+        /* width: 64rem;  */
+   }
+
+   .rpmanager .main .top .right{
+
+    width: 60%;
+    height: 96.8rem;
+    /* height: 76.8rem; */
+   }
+
+   .rpmanager .main .top{
+    flex-direction: column;
+    align-items: center;
+   }
+   
+   .rpmanager .main .bottom{
+        /* width: 85%; */
+   } 
+}
+
+
+@media screen and (max-width : 600px){
+    .rpmanager{
+        height: 291rem;
+        /* height: 2910px */
+        /* height: 275rem; */
+    }
+
+    .rpmanager .main{
+        height: 283rem;
+        /* height: 2830px; */
+        /* height: 268rem; */
+    }
+
+    .rpmanager .main .top{
+        height: 202rem;
+        /* height: 2020px; */
+        /* height: 175rem; */
+    }
+
+    .rpmanager .main .top .left{
+        width: 60rem;
+        /* height: 1356px; */
+    }
+
+    .rpmanager .main .top .right{
+        height: 82.8rem;
+    }
+
+    .rpmanager .main .bottom{
+        /* height: 115rem; */
+        height: 96rem;
+        /* height: 960px; */
+    }
+
+
+    .rpmanager .main .bottom .form{
+        width: 100%;
+    }
+
+    .rpmanager .main .bottom .form .fullname .fname, .lname{
+        width: 46%;
+    }
+
+    .rpmanager .main .bottom .form .email, .phoneno{
+        width: 100%;
+    }
+
+}
+
+
+
+@media screen and (max-width : 80px){
+    .rpmanager{
+        /* height: 291rem; */
+        height: 2112px;
+        /* height: 275rem; */
+    }
+
+    .rpmanager .main{
+        /* height: 283rem; */
+        height: 2073px;
+        /* height: 268rem; */
+    }
+
+    .rpmanager .main .top{
+        /* height: 202rem; */
+        height: 1580px;
+        /* height: 175rem; */
+    }
+
+    .rpmanager .main .top .left{
+        width: 90%;
+        /* height: 1356px; */
+    }
+
+    .rpmanager .main .top .right{
+        height: 82.8rem;
+        /* height: 712px; */
+    }
+
+    .rpmanager .main .bottom{
+        /* height: 115rem; */
+        /* height: 96rem; */
+        height: 960px;
+    }
+}
+
+
+@media screen and (max-width : 414px){
+    .rpmanager{
+        height: 318rem;
+    }
+
+    .rpmanager .main{
+        height: 312rem;
+    }
+
+    .rpmanager .main .top{
+        height: 216rem;
+    }
+
+    .rpmanager .main .top .left{
+        width: 90%;
+    }
+
+    .rpmanager .main .top .right{
+        width: 85%;
+    }
+
+    .rpmanager .main .bottom .form .fullname{
+        flex-direction: column;
+        justify-content: space-between;
+        height: 20%;
+    }
+
+    .rpmanager .main .bottom .form .fullname .fname{
+        width: 100%;
+    }
+
+    .rpmanager .main .bottom .form .fullname .lname{
+        width: 100%;
+    }
+}
+
+
+@media screen and (max-width : 360px){
+    .rpmanager{
+        height: 330rem;
+    }
+
+    .rpmanager .main{
+        height: 324rem;
+    }
+
+    .rpmanager .main .top{
+        height: 228rem;
+    }
+
+    .rpmanager .main .top .left{
+        width: 89%;
+    }
+
+    .rpmanager .main .top .right{
+        width: 85%;
+    }
+
+    .rpmanager .main .bottom{
+
+    }
+
+    .rpmanager .main .bottom .form .fullname{
+        flex-direction: column;
+        justify-content: space-between;
+        height: 20%;
+    }
+
+    .rpmanager .main .bottom .form .fullname .fname{
+        width: 100%;
+    }
+
+    .rpmanager .main .bottom .form .fullname .lname{
+        width: 100%;
+    }
+
+    .rpmanager .main .bottom .interest > div{
+        font-size: 1.8rem;
+    }
 }
